# FairML-Law-School-Dataset

./: pyproject.toml
code/notebooks/: bias.py  main.ipynb
code/results/: assessement.md  presentation.md  results.md
